--- a/styel.css
+++ b/styel.css
@@ -193,3 +193,84 @@ nav {
   width: 100%;
   max-width: 100%;
 }
+/* destnison areya styel */
+
+#destination_contenr {
+  width: 85%;
+  margin: 100px auto;
+}
+.img_boxesh1 {
+  display: flex;
+  gap: 1rem;
+}
+.destnison_box2 {
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+.destinon_boxed3 {
+  display: flex;
+  gap: 1rem;
+}
+
+.destnison_text_areya {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+.destnion_text_titel {
+  color: #131318;
+
+  font-size: 2.6rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.destnison_descoption {
+  color: rgba(19, 19, 24, 0.7);
+
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin: 24px 0;
+}
+.destnison_img_contner {
+  margin-top: 3rem;
+}
+.destnison_img_box1 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box2 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box3 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box4 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box5 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box6 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.destnison_img_box7 img {
+  width: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
