footer section complet

--- a/responce.css
+++ b/responce.css
@@ -124,5 +124,9 @@
   }
   .input_descoption {
     margin-bottom: 1rem;
+    font-size: 14px;
+  }
+  .footer_contner_section {
+    width: 100%;
   }
 }
