--- a/styel.css
+++ b/styel.css
@@ -473,3 +473,59 @@ hr {
   text-align: center;
   color: #fff;
 }
+/*footer section */
+footer {
+  padding: 110px 0;
+  background: rgba(19, 19, 24, 0.05);
+}
+.footer_contner_section {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.footer_section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer_titel {
+  color: var(--Dark-01, #131318);
+
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.footer_descoption {
+  color: #5a5a5d;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.footer_name_color {
+  color: #ff5400;
+}
+.footer_icon_areya {
+  margin-top: 2rem;
+}
+.footer_icon_areya i {
+  font-size: 1.6rem;
+  margin-right: 1rem;
+}
+.hr_color {
+  margin: 3rem;
+  background: rgba(19, 19, 24, 0.1);
+}
+.footer_descoption_areya {
+  color: #131318;
+
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
